@@ -10,6 +10,7 @@ linux (5.3.7-2) UNRELEASED; urgency=medium
   * Add maint scripts to meta-packages to convert doc directories to symlinks
     (Closes: #942861)
   * debian/lib/python/debian_linux/utils.py: Use 'with' to manage file handles
+  * debian/lib/python/debian_linux/utils.py: Store file mode for templates
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 23 Oct 2019 18:32:15 +0100
 
